testing fix of white flicker

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,11 +5,13 @@
 @tailwind utilities;
 
 @layer utilities {
-
-    #animated-bg {
-        background: url('../public/img/bg1-1920x1080.jpg') no-repeat center center;
-        transition: 3s ease-in-out;
-        min-height: 100vh;
-        position: relative;
-      }
+  #animated-bg {
+    background: url("../public/img/bg1-1920x1080.jpg") no-repeat center center;
+    transition: 3s ease-in-out;
+    min-height: 100vh;
+    position: relative;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+  }
 }
